--- a/demo/index.html
+++ b/demo/index.html
@@ -40,28 +40,37 @@
 			</label>
 		</span>
 		<span>
+			<label>
+				propagation speed
+				<input type="number" name="speed" value="1">
+			</label>
+		</span>
+		<span>
 			Density (low = more tunnels / high = more open space)
 			<input type="range" name="density" min="0" max="100" step="1" value="7">
 			<label for="density">0.07</label>
 		</span>
 		<span>
-			<label>
-				propagation speed
-				<input type="number" name="speed" value="1">
-			</label>
+			Linearity (low = irregular / high = straight)
+			<input type="range" name="linearity" min="0" max="100" step="1" value="7">
+			<label for="linearity">0.07</label>
+		</span>
+		<span>
+			<i>Note that a higher density will lessen the effect of linearity</i>
 		</span>
 
 		<button class="generate">Generate Level</button>
 
 		<h3>presets</h3>
 		<!-- Preset order: block size, width&height, min, max, density, speed -->
-		<button preset="2,100,3000,3000,100,20">Cloud</button>
-		<button preset="1,200,10000,10000,3,10">Termite</button>
-		<button preset="1,200,10000,10000,0,1">Worm</button>
-		<button preset="10,20,100,150,10,1">Dungeon</button>
-		<button preset="10,20,100,150,1,1">Dungeon-tunnel</button>
-		<button preset="10,20,100,150,35,1">Dungeon-open</button>
-		<button preset="2,100,9000,9000,100,100">Treasure Map</button>
+		<button preset="2,100,3000,3000,100,0,20">Cloud</button>
+		<button preset="1,200,10000,10000,7,0,10">Termite</button>
+		<button preset="1,200,10000,10000,0,0,10">Worm</button>
+		<button preset="10,20,100,150,10,0.7,3">Dungeon</button>
+		<button preset="10,20,100,150,1,0,3">Dungeon tunnel</button>
+		<button preset="10,20,100,150,35,0,3">Dungeon open</button>
+		<button preset="10,20,400,400,7,75,3">Dungeon full</button>
+		<button preset="2,100,9000,9000,100,0,100">Treasure Map</button>
 	</div>
 
 	<div class="levels">
