--- a/demo/index.html
+++ b/demo/index.html
@@ -62,7 +62,7 @@
 		<button class="generate">Generate Level</button>
 
 		<h3>presets</h3>
-		<!-- Preset order: block size, width&height, min, max, density, speed -->
+		<!-- Preset order: block size, width&height, min, max, density, linearity, speed -->
 		<button preset="2,100,3000,3000,100,0,20">Cloud</button>
 		<button preset="1,200,10000,10000,7,0,10">Termite</button>
 		<button preset="1,200,10000,10000,0,0,10">Worm</button>
