added `dungeon sewers` to demo page

--- a/demo/index.html
+++ b/demo/index.html
@@ -67,6 +67,7 @@
 		<button preset="1,200,10000,10000,7,0,10">Termite</button>
 		<button preset="1,200,10000,10000,0,0,10">Worm</button>
 		<button preset="10,20,100,150,10,0.7,3">Dungeon</button>
+		<button preset="10,20,100,150,5,100,3">Dungeon sewers</button>
 		<button preset="10,20,100,150,1,0,3">Dungeon tunnel</button>
 		<button preset="10,20,100,150,35,0,3">Dungeon open</button>
 		<button preset="10,20,400,400,7,75,3">Dungeon full</button>
