--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html>
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link href="{{ site.baseurl }}/src/demo.css" rel="stylesheet" type="text/css">
-  <script src="{{ site.baseurl }}/demo.js"></script>
+  <link href="https://github.com/furka/grlg/demo/src/demo.css" rel="stylesheet" type="text/css">
+  <script src="https://github.com/furka/grlg/demo/demo.js"></script>
 </head>
 <body>
   <div class="controls">
-    <h1><img src="assets/grlg-logo.png"></h1>
+    <h1><img src="https://github.com/furka/grlg/demo/assets/grlg-logo.png"></h1>
     <h3>settings</h3>
     <span>
       <label>
